<resources>
    <string name="app_name">Github User</string>
    <string name="repository">Repository</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="search_hint">Insert keyword</string>
    <string name="search_image">Search Image</string>
    <string name="user_not_found">User not found!</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="change_language">Change language</string>
    <string name="no_followers">does\'nt have any follower yet</string>
    <string name="no_following">is\'nt following anybody</string>
    <string name="favorite_button">favorite button</string>
    <string name="success_add_to_db">Added to favorites</string>
    <string name="success_delete_from_db">Removed from favorites</string>
    <string name="favorites">Favorites</string>
    <string name="empty_favorites">You have no favorites user</string>
    <string name="image_favorites">Image Favorites</string>
    <string name="about">About</string>
    <string name="creator">by Fikri Maulana</string>
    <string name="credit_like">Ilustration Like made by Ivan Mesaroš from Blush Design</string>
    <string name="credit_searching">Ilustration Searching made by Mariana Gonzalez Vega</string>
    <string name="credit_github">Icon Github made by Pixel perfect from www.flaticon.com</string>
    <string name="logo_app">Logo app</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_message">Explore user on Github!</string>
    <string name="reminder_time">09:00</string>
    <string name="image_no_followers">Image no followers</string>
    <string name="image_no_following">Image no following</string>
    <string name="search">Search</string>
    <string name="reminder_on">Reminder on</string>
    <string name="reminder_off">Reminder off</string>
    <string name="confirm_exit">Please press again to exit</string>
</resources>