<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24_black"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24_black"
        android:title="@string/setting"
        app:showAsAction="collapseActionView|ifRoom" />
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_baseline_info_24_white"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>